<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_right_drawer"
    android:layout_width="@dimen/x310"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:background="@color/commonColorGrayDark"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_right_drawer_layout_user"
        android:layout_width="@dimen/x160"
        android:layout_height="@dimen/x160"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/common_ic_user" />

    <TextView
        android:id="@+id/tv_right_drawer_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:singleLine="true"
        android:ellipsize="end"
        android:textColor="@android:color/white"
        android:textSize="@dimen/x20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginTop="@dimen/x10"
        android:layout_marginRight="@dimen/x30"
        android:background="@color/commonColorBase" />

    <TextView
        android:id="@+id/tv_right_drawer_layout_groups"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x90"
        android:gravity="center"
        android:text="@string/common_groups"
        android:textColor="@android:color/white"
        android:textSize="@dimen/x26" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginRight="@dimen/x30"
        android:background="@color/commonColorBase" />

    <TextView
        android:id="@+id/tv_right_drawer_layout_automation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x90"
        android:gravity="center"
        android:text="@string/common_automations"
        android:textColor="@android:color/white"
        android:textSize="@dimen/x26" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginRight="@dimen/x30"
        android:background="@color/commonColorBase" />

    <TextView
        android:id="@+id/tv_right_drawer_layout_schedules"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x90"
        android:gravity="center"
        android:text="@string/common_schedules"
        android:textColor="@android:color/white"
        android:textSize="@dimen/x26" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginRight="@dimen/x30"
        android:background="@color/commonColorBase" />

    <TextView
        android:id="@+id/tv_right_drawer_layout_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x90"
        android:gravity="center"
        android:text="@string/common_settings"
        android:textColor="@android:color/white"
        android:textSize="@dimen/x26" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginRight="@dimen/x30"
        android:background="@color/commonColorBase" />

    <TextView
        android:id="@+id/tv_right_drawer_layout_sign_out"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x90"
        android:layout_marginTop="@dimen/x40"
        android:gravity="center"
        android:text="@string/common_sign_out"
        android:textColor="@android:color/white"
        android:textSize="@dimen/x26" />

</LinearLayout>